# spot-gazer-vision

./: .env.sample  .gitignore  README.md  pyproject.toml  run_prediction.py
docs/: mask_creation.md  yolov8m_car_detection.ipynb
src/: __init__.py  aiohttp_jwt_client.py  logging_config.py  settings.py  spot_gazer.py
tests/src/: test_aiohttp_jwt_client.py  test_spot_gazer.py
