[project]
name = "spot-gazer-vision"
version = "0.0.1"
description = "Computer vision service of the parking lot occupancy recognition system"
authors = [{ name = "AKrekhovetskyi", email = "akrechovetskiy@gmail.com" }]
license = { file = "./LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3.162",
    "requests>=2.32.4",
    "colorlog>=6.9.0",
    "pyjwt>=2.10.1",
    "aiohttp>=3.12.14",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
faker = "^37.4.2"
pytest-asyncio = "^1.1.0"
pytest-aiohttp = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
